--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-<section class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+<section class="container navig">
+    <div class="row">
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" href="#">LOGO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,6 +38,10 @@
           </form>
         </div>
       </nav>
+    </div>
+    </section>
+    <section class="accueil col-12">
+        <img src="image/para/calque-7.png" alt="fond">
     </section>
 
 
