modidfication de calque1 ( oppacité du parapente ) = calque1v2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li class="layer" data-depth="0.5"><img class="mont3" src="image/para/calque-4.png" alt=""></li>
         <li class="layer" data-depth="0.6"><img class="mont2" src="image/para/calque-3.png" alt=""></li>
         <li class="layer" data-depth="0.7"><img  class="mont1" src="image/para/calque-2.png" alt=""></li>
-        <li class="layer" data-depth="0.8"><img class="parapente" src="image/para/calque-1.png" alt=""></li>
+        <li class="layer" data-depth="0.8"><img class="parapente" src="image/para/calque-1v2.png" alt=""></li>
     </ul>
     <div class="col-12 no_gout">
         <input type="button" class="ml-auto mr-auto bouton_main petit" value="S'envoler"> 
