--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
         <li class="layer" data-depth="0.8"><img class="parapente" src="image/para/calque-1v2.png" alt=""></li>
     </ul>
     <div class="col-12 no_gout">
+        <h1>
+            <span>L</span>
+        <span>a</span>
+        <span>V</span>
+        <span>o</span>
+        <span>i</span>
+        <span>l</span>
+        <span>e</span>
+        <span>d</span>
+        <span>e</span>
+        <span>l</span>
+        <span>'</span>
+        <span>a</span>
+        <span>i</span>
+        <span>r</span>
+        </h1>
+        
+
         <input type="button" class="ml-auto mr-auto bouton_main petit" value="S'envoler"> 
     <input type="button" class="ml-auto mr-auto bouton_main moyen" value="Offrir le ciel">
     <input type="button" class="ml-auto mr-auto bouton_main grand" value="Surpasser les sommets">
