allegement des images parallax

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section data-relative-input="true" id="scene" class="col-12">
        
     <ul>
-        <li class="layer" data-depth="0.2" ><img class="ciel" src="image/para/calque-7.png" alt=""></li>
-        <li class="layer" data-depth="0.4"><img class="mont5" src="image/para/calque-5.png" alt=""></li>
-        <li class="layer" data-depth="0.5"><img class="mont3" src="image/para/calque-4.png" alt=""></li>
-        <li class="layer" data-depth="0.6"><img class="mont2" src="image/para/calque-3.png" alt=""></li>
+        <li class="layer" data-depth="0.2" ><img class="ciel" src="image/para/light/calque-7.png" alt=""></li>
+        <li class="layer" data-depth="0.4"><img class="mont5" src="image/para/light/calque-5.png" alt=""></li>
+        <li class="layer" data-depth="0.5"><img class="mont3" src="image/para/light/calque-4.png" alt=""></li>
+        <li class="layer" data-depth="0.6"><img class="mont2" src="image/para/light/calque-3.png" alt=""></li>
         <li class="layer" data-depth="0.7"><img  class="mont1" src="image/para/calque-2.png" alt=""></li>
         <li class="layer" data-depth="0.8"><img class="parapente" src="image/para/calque-1v2.png" alt=""></li>
     </ul>
