--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                 <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero inventore illum necessitatibus perspiciatis, voluptatem alias? Cumque itaque unde voluptas sequi pariatur veniam necessitatibus asperiores repudiandae, vero optio amet dolore beatae quia autem eaque rerum libero iusto. Tempora, voluptatibus?</p>
                 <input type="button" class="ml-auto mr-auto bouton_second" value="Nous contacter">
                </div> 
-            <img class="" src="/image/art1v2.png" alt="duo de parapente">
+            <img class="" src="image/art1v2.png" alt="duo de parapente">
         </article>
 
         <article class="col-12 row">
-            <img class="" src="/image/art2.png" alt="duo de parapente">
+            <img class="" src="image/art2.png" alt="duo de parapente">
             <div class="mr-auto texte col-5">
              <h4>Venez découvrir un sport unique, progressez en douceur.</h4>
              <p class="text_droite">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero inventore illum necessitatibus perspiciatis, voluptatem alias? Cumque itaque unde voluptas sequi pariatur veniam necessitatibus asperiores repudiandae, vero optio amet dolore beatae quia autem eaque rerum libero iusto. Tempora, voluptatibus?</p>
