modif section deux: ajout de 3 rubriques

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </section>
 <section class="navig" >
     <div class="container col-12"  id="navbar_fixed">
-        <nav  class="col-6 navbar navbar-expand-lg navbar-light ml-auto mr-auto">
+        <nav  class="col-9 navbar navbar-expand-lg ml-auto navbar-light">
             <a class="navbar-brand" href="#"><img class="logo" src="image/para/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -117,11 +117,25 @@
 </section>
     <section class=" section2">
       
-            <article class=" row">
-               <div class=" ml-auto texte col-5">
-                <h3>Venez découvrir un sport unique, progressez en douceur.</h3>
-                <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero inventore illum necessitatibus perspiciatis, voluptatem alias? Cumque itaque unde voluptas sequi pariatur veniam necessitatibus asperiores repudiandae, vero optio amet dolore beatae quia autem eaque rerum libero iusto. Tempora, voluptatibus?</p>
-                <input type="button" class="ml-auto mr-auto bouton_second" value="Nous contacter">
+            <article class="row">
+               <div class=" ml-auto row texte justify-content-around col-6">
+                   <div class="col-3">
+                    <h3>Venez découvrir un sport unique, progressez en douceur.</h3>
+                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
+                    <input type="button" class="ml-auto mr-auto bouton_second" value="Nous contacter">
+                   </div>
+                   <div class="diviseur"></div>
+                   <div class="col-3 texte_milieu">
+                    <h3>Venez découvrir un sport unique, progressez en douceur.</h3>
+                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
+                    <input type="button" class="ml-auto mr-auto bouton_second" value="Nous contacter">
+                   </div>
+                   <div class="diviseur"></div>
+                   <div class="col-3">
+                    <h3>Venez découvrir un sport unique, progressez en douceur.</h3>
+                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
+                    <input type="button" class="ml-auto mr-auto bouton_second" value="Nous contacter">
+                   </div>
                </div> 
             <img class="" src="image/art1v2.png" alt="duo de parapente">
         </article>
