modification des article section une, ajout thumbnail, avancement responsive.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div id="cadre_bouton">
                 <!-- <input type="button" class="ml-auto mr-auto bouton_main petit" value="Accueil"> -->
-                <a class="ml-auto mr-auto actif petit" href="index.html">Acceuil</a>
+                <a class="ml-auto mr-auto actif petit" href="index.html">Accueil</a>
                 <a class="ml-auto mr-auto bouton_main petit" href="rejoindre.html">Nous rejoindre</a>
                 <a class="ml-auto mr-auto bouton_main petit" href="equipe.html">L'équipe</a>
 
@@ -117,10 +117,13 @@
     </section>
     <section class=" section2">
 
-        <article class="row article-haut">
-            <div class=" mr-auto row col-lg-8 justify-content-around">
-                <div class="col-lg-4 col-sm-6 row rubrique_haut">
+        <article class="row article-haut ml-auto mr-auto justify-content-between">
+          <div class="row col-12 justify-content-between">
+                <div class="col-lg-3 col-sm-6 row rubrique_haut">
                     <h3>Venez découvrir un sport unique, progressez en douceur.</h3>
+                    <a href="#" class="ml-auto mr-auto row">
+                        <img src="image/rubrique/prepa-duo.jpg" alt="Vol en tendem">
+                    </a>
                     <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                         harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
                         inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
@@ -129,8 +132,11 @@
                     </div>
                 </div>
                 <div class="diviseur"></div>
-                <div class="col-lg-4 col-sm-6 rubrique_haut row texte_milieu">
+                <div class="col-lg-3 col-sm-6 rubrique_haut row texte_milieu">
                     <h3>Déjà rompus à la pratique ? Rejoignez-nous !</h3>
+                    <a href="#" class="ml-auto mr-auto row">
+                        <img src="image/rubrique/seul-sunshine-carre.jpg" alt="Vol en tendem">
+                    </a>
                     <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                         harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
                         inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
@@ -139,8 +145,11 @@
                         </div>
                 </div>
                 <div class="diviseur"></div>
-                <div class="col-lg-4 col-sm-12 rubrique_haut row">
-                    <h3>Envie d'offrir une expérience innoubliable ? Bienvenue.</h3>
+                <div class="col-lg-3 col-sm-6 rubrique_haut row texte_milieu">
+                    <h3>Déjà rompus à la pratique ? Rejoignez-nous !</h3>
+                    <a href="#" class="ml-auto mr-auto row">
+                        <img src="image/rubrique/seul-sunshine-carre.jpg" alt="Vol en tendem">
+                    </a>
                     <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                         harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
                         inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
@@ -148,11 +157,21 @@
                             <input type="button" class="col-12 ml-auto mr-auto bouton_second" value="Nous contacter">
                         </div>
                 </div>
-            </div>
-            <!-- <div class="col-4"><img src="image/art1v2.png" alt="duo de parapente"></div> -->
-            
+                <div class="diviseur"></div>
+                <div class="col-lg-3 col-sm-6 rubrique_haut row">
+                    <h3>Envie d'offrir une expérience innoubliable ? Bienvenue.</h3>
+                    <a href="#" class="ml-auto mr-auto row">
+                        <img src="image/rubrique/vol-tendem2.jpg" alt="Vol en tendem">
+                    </a>
+                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                        harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
+                        inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
+                        <div class="row col-12 ml-auto mr-auto align-items-end">
+                            <input type="button" class="col-12 ml-auto mr-auto bouton_second" value="Nous contacter">
+                        </div>
+                </div>
+            </div>    
         </article>
-
         <article class="col-12 row">
             <img class="col-6" src="image/art2.png" alt="duo de parapente">
 
@@ -223,7 +242,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script src="parallax.js"></script>
-    <script src="script.js"></script>
+    <script src="sticky.js"></script>
 </body>
 
 </html>
