--- a/index.html
+++ b/index.html
@@ -81,12 +81,9 @@
     </section>
     <section class="navig">
         <div class="container col-12" id="navbar_fixed">
-            <nav class="col-9 navbar navbar-expand-lg ml-auto navbar-light">
+            <nav class="col-11 navbar navbar-expand ml-auto navbar-light">
                 <a class="navbar-brand" href="#"><img class="logo" src="image/para/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                    aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -117,14 +114,14 @@
     </section>
     <section class=" section2">
 
-        <article class="row article-haut ml-auto mr-auto justify-content-between">
-          <div class="row col-12 justify-content-between">
-                <div class="col-lg-3 col-sm-6 row rubrique_haut">
+        <article class="row article-haut ml-auto mr-auto justify-content-center">
+          <div class="row col-12 justify-content-around">
+                <div class="col-lg-3 col-sm-6 row rubrique_haut haut-g">
                     <h3>Venez découvrir un sport unique, progressez en douceur.</h3>
                     <a href="#" class="ml-auto mr-auto row">
                         <img src="image/rubrique/prepa-duo.jpg" alt="Vol en tendem">
                     </a>
-                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                         harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
                         inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
                     <div class="row col-12 ml-auto mr-auto align-items-end">
@@ -132,12 +129,12 @@
                     </div>
                 </div>
                 <div class="diviseur"></div>
-                <div class="col-lg-3 col-sm-6 rubrique_haut row texte_milieu">
+                <div class="col-lg-3 col-sm-6 rubrique_haut row haut-d">
                     <h3>Déjà rompus à la pratique ? Rejoignez-nous !</h3>
                     <a href="#" class="ml-auto mr-auto row">
                         <img src="image/rubrique/seul-sunshine-carre.jpg" alt="Vol en tendem">
                     </a>
-                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                         harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
                         inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
                         <div class="row col-12 ml-auto mr-auto align-items-end">
@@ -145,25 +142,27 @@
                         </div>
                 </div>
                 <div class="diviseur"></div>
-                <div class="col-lg-3 col-sm-6 rubrique_haut row texte_milieu">
+                <div class="col-lg-3 col-sm-6 rubrique_haut row bas-g">
+                    
                     <h3>Déjà rompus à la pratique ? Rejoignez-nous !</h3>
-                    <a href="#" class="ml-auto mr-auto row">
-                        <img src="image/rubrique/seul-sunshine-carre.jpg" alt="Vol en tendem">
+                    <div class="row col-12 ml-auto mr-auto align-self-start">
+                    <a href="#" class="align-self-start ml-auto mr-auto row">
+                        <img src="image/rubrique/prepa-seul.jpg" alt="Vol en tendem">
                     </a>
-                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
-                        harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
-                        inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
-                        <div class="row col-12 ml-auto mr-auto align-items-end">
+                </div>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                        harum blanditiis doloribus veniam ut nulla adipisci n</p>
+                        <div class="row  col-12 ml-auto mr-auto align-items-end">
                             <input type="button" class="col-12 ml-auto mr-auto bouton_second" value="Nous contacter">
                         </div>
                 </div>
                 <div class="diviseur"></div>
-                <div class="col-lg-3 col-sm-6 rubrique_haut row">
+                <div class="col-lg-3 col-sm-6 rubrique_haut row bas-d">
                     <h3>Envie d'offrir une expérience innoubliable ? Bienvenue.</h3>
                     <a href="#" class="ml-auto mr-auto row">
                         <img src="image/rubrique/vol-tendem2.jpg" alt="Vol en tendem">
                     </a>
-                    <p class="text_gauche ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
                         harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
                         inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
                         <div class="row col-12 ml-auto mr-auto align-items-end">
