--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <section class="section_bas">
         <article class="col-12 row">
             <div class="col-7">
-            <img class="photo-large" src="/image/art2.png" alt="">
-            <img class="col-8 ml-auto mr-auto photo-resp" src="/image/rubrique/alone-courte.jpg" alt="">
+            <img class="photo-large" src="image/art2.png" alt="">
+            <img class="col-8 ml-auto mr-auto photo-resp" src="image/rubrique/alone-courte.jpg" alt="">
         </div>
             <div class="ml-auto row col-5">
                 <h4>"Ascension", "Vol Plané", "La Volière" <p>Un programme adapté à chaque profil.</p>
