--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
                 <div class="col-lg-3 col-sm-6 rubrique_haut row bas-g">
                     
                     <h3>Déjà rompus à la pratique ? Rejoignez-nous !</h3>
-                    <div class="row col-12 ml-auto mr-auto align-self-start">
+               
                     <a href="#" class="align-self-start ml-auto mr-auto row">
                         <img src="image/rubrique/prepa-seul.jpg" alt="Vol en tendem">
                     </a>
-                </div>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
-                        harum blanditiis doloribus veniam ut nulla adipisci n</p>
+                        harum blanditiis doloribus veniam ut nulla adipisci nostrum explicabo ipsum minima, libero
+                        inventore illum necessitatibus perspiciatis, voluptatem alias?</p>
                         <div class="row  col-12 ml-auto mr-auto align-items-end">
                             <input type="button" class="col-12 ml-auto mr-auto bouton_second" value="Nous contacter">
                         </div>
