maj des liens de nav

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             <div id="cadre_bouton">
                 <!-- <input type="button" class="ml-auto mr-auto bouton_main petit" value="Accueil"> -->
                 <a class="ml-auto mr-auto actif petit" href="index.html">Accueil</a>
-                <a class="ml-auto mr-auto bouton_main petit" href="rejoindre.html">Nous rejoindre</a>
-                <a class="ml-auto mr-auto bouton_main petit" href="equipe.html">L'équipe</a>
+                <a class="ml-auto mr-auto bouton_main petit" href="#">Nous rejoindre</a>
+                <a class="ml-auto mr-auto bouton_main petit" href="#">L'équipe</a>
 
-                <a class="ml-auto mr-auto bouton_main petit" href="programme.html">Programme</a>
-                <a class="ml-auto mr-auto bouton_main petit" href="galerie.html">Galerie</a>
-                <a class="ml-auto mr-auto bouton_main petit" href="contact.html">Nous contacter</a>
+                <a class="ml-auto mr-auto bouton_main petit" href="#">Programme</a>
+                <a class="ml-auto mr-auto bouton_main petit" href="#">Galerie</a>
+                <a class="ml-auto mr-auto bouton_main petit" href="#">Nous contacter</a>
             </div>
         </div>
 
